--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "doctrine/dbal": "v2.4.2",
         "laravel/tinker": "~1.0",
-        "mailjet/laravel-mailjet": "^1.1"
+        "mailjet/laravel-mailjet": "^1.1",
+      "ext-json": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
