--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "doctrine/dbal": "v2.4.2",
         "laravel/tinker": "~1.0",
         "mailjet/laravel-mailjet": "^1.1",
-      "ext-json": "*"
+      "ext-json": "*",
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
