--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "ext-json": "*",
+        "caouecs/laravel-lang": "~3.0",
         "doctrine/dbal": "v2.4.2",
+        "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "mailjet/laravel-mailjet": "^1.1",
-      "ext-json": "*",
-
+        "mailjet/laravel-mailjet": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
